Day 1 revisit and enhance

--- a/second.html
+++ b/second.html
@@ -3,7 +3,8 @@
     <title>Html Tables</title>
   </head>
   <body>
-    <table border="1" cellspacing="10" cellpadding="5" border-collapse="collapse">
+    <table border="1" cellspacing="10" cellpadding="5"
+    style="border-collapse: collapse;" >
       <tr>
         <td><em>Row 1, Cell 1</em></td>
         <td>Row 1, Cell 2</td>
@@ -20,6 +21,24 @@
         <td>Row 3, Cell 3</td>
       </tr>
     </table>
+
+    <table>
+        <tr>
+            <td>H.No 1-2-3</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Hyderabad</td>
+            <td>Telangana</td>
+            <td>500036</td>
+        </tr>
+    </table>
+    <address>
+        H.No 1-2-3	<br/>	<hr/>
+Hyderabad	Telangana	500036
+    </address>
+
   </body>
 </html>
 <!-- ALT + Shift + F -->
