--- a/begin.html
+++ b/begin.html
@@ -4,17 +4,17 @@
 		<link rel="icon" href="images/elhamd_logo.PNG" />
 	</head>
 	<body>
-		<p>Some paragraph - block element</p>
-		<em>italicized paragraph - inline element</em>
+		<p id="paragraph1">Some paragraph - block element</P>
+		<em id="paragraph1">italicized paragraph - inline element</em>
 		<strong>italicized paragraph - inline element</strong>
-		<h1>header</h1>
+		<h1 style="color: rgb(77, 180, 194); background-color: black; border: 3px dashed #FFFFFF;">header</h1>
 		<h2>header</h2>
 		<h3>header</h3>
 		<h4>header</h4>
 		<h5>header</h5>
 		<h6>header</h6>
-		<a href="second.html">Anchor tag</a>
-		<img src="images/elhamd_logo.PNG" />
+		<a href="second.html">Anchor tag <img src="images/elhamd_logo.PNG" /></a>
+		
 		<div>
 			This is a div
 		</div>
@@ -27,5 +27,15 @@
 		<button disabled>
 			This is a button
 		</button>
+		<ul>
+			<li>File extensions</li>
+			<li>Elements and their tags</li>
+			<li>Attributes</li>
+		</ul>
+		<ol>
+			<li>item 1</li>
+			<li>item 2</li>
+			<li>item 3</li>
+		</ol>
 	</body>
 </html>
