--- a/begin.html
+++ b/begin.html
@@ -4,6 +4,7 @@
 		<link rel="icon" href="images/elhamd_logo.PNG" />
 	</head>
 	<body>
+		<a href="forms.html">Forms</a>
 		<p id="paragraph1">Some paragraph - block element</P>
 		<em id="paragraph1">italicized paragraph - inline element</em>
 		<strong>italicized paragraph - inline element</strong>
