--- a/begin.html
+++ b/begin.html
@@ -1,42 +1,55 @@
 <html>
-	<head>
-		<title>Begin</title>
-		<link rel="icon" href="images/elhamd_logo.PNG" />
-	</head>
-	<body>
-		<a href="forms.html">Forms</a>
-		<p id="paragraph1">Some paragraph - block element</P>
-		<em id="paragraph1">italicized paragraph - inline element</em>
-		<strong>italicized paragraph - inline element</strong>
-		<h1 style="color: rgb(77, 180, 194); background-color: black; border: 3px dashed #FFFFFF;">header</h1>
-		<h2>header</h2>
-		<h3>header</h3>
-		<h4>header</h4>
-		<h5>header</h5>
-		<h6>header</h6>
-		<a href="second.html">Anchor tag <img src="images/elhamd_logo.PNG" /></a>
-		
-		<div>
-			This is a div
-		</div>
-		<span>
-			This is a span
-		</span>
-		<span>
-			This is a span 2
-		</span>
-		<button disabled>
-			This is a button
-		</button>
-		<ul>
-			<li>File extensions</li>
-			<li>Elements and their tags</li>
-			<li>Attributes</li>
-		</ul>
-		<ol>
-			<li>item 1</li>
-			<li>item 2</li>
-			<li>item 3</li>
-		</ol>
-	</body>
+  <head>
+    <title>Begin</title>
+    <link rel="icon" href="images/elhamd_logo.PNG" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>A</td>
+        <td>B</td>
+      </tr>
+      <tr>
+        <td>C</td>
+        <td>D</td>
+      </tr>
+    </table>
+    <a href="forms.html">Forms</a>
+    <p id="paragraph1">Some paragraph - block element</p>
+    <em id="paragraph1">italicized paragraph - inline element</em>
+    <strong>italicized paragraph - inline element</strong>
+    <h1
+      style="
+        color: rgb(77, 180, 194);
+        background-color: black;
+        border: 3px dashed #ffffff;
+      "
+    >
+      header
+    </h1>
+    <h2>header</h2>
+    <h3>header</h3>
+    <h4>header</h4>
+    <h5>header</h5>
+    <h6>header</h6>
+    <a href="second.html"
+      >Second Anchor tag <img src="images/elhamd_logo.PNG"
+    /></a>
+    <a href="styling.html">Styling</a>
+    <div>This is a div</div>
+    <span> This is a span </span>
+    <span> This is a span 2 </span>
+    <button disabled>This is a button</button>
+    <ul>
+      <li>File extensions</li>
+      <li>Elements and their tags</li>
+      <li>Attributes</li>
+    </ul>
+    <ol>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+    </ol>
+  </body>
 </html>
