--- a/timer.html
+++ b/timer.html
@@ -6,8 +6,42 @@
     <title>Timer</title>
   </head>
   <body>
-    <span id="minutes">0</span>:<span id="seconds">0</span>
-    <button id="startButton" onclick="start();">START</button>
+    <style>
+      body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      }
+      #timer {
+      font-size: 3rem;
+      font-weight: bold;
+      color: #333;
+      margin-bottom: 20px;
+      letter-spacing: 2px;
+      }
+      #startButton {
+      padding: 10px 30px;
+      font-size: 1.2rem;
+      background: #0078d7;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.2s;
+      }
+      #startButton:hover {
+      background: #005fa3;
+      }
+    </style>
+    <div id="timer">
+      <span id="minutes">0</span>:<span id="seconds">0</span>
+    </div>
+    <button id="startButton" style="background: #339cff;" onclick="start();">START</button>
   </body>
   <script>
     let secondsCounter = 0;
